# Sequence-Rust

./: .gitignore  Cargo.toml  README.md  backtrack_tinyvec.txt  sequence (1,2).txt  sequence (1,3).txt  zip.bat
src/: global.rs  main.rs  predefined.txt  sequence.rs  sequence13rust.txt  sequence13rust.txt.bak  sequence14rust.txt  sequence2.rs  sequencerust.txt
