[package]
name = "sequence_rust"
version = "1.0.0"
authors = ["Axel West"]
edition = "2021"

[dependencies]
ahash = "0.8.11"
# alloc-madvise = "0.5.0"
bit-vec = "0.8.0"
bit-vec_serde = "0.6.0"
cached = "0.43.0"
cmov = "0.3.1"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
divisors = "0.2.1"
fixedbitset = "0.5.7"
itertools = "0.10.5"
flurry = "0.4.0"
hashbrown = "0.15.2"
lazy_static = "1.5.0"
libc = "0.2.172"
num = "0.4.3"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
primes = "0.4.0"
prime_factorization = "1.0.5"
rand = "0.9.0"
seize = "0.2.5"
serde = { version = "1.0.210", features = ["derive"] }
# set-partitions = "1.0.1"
shared_memory = "0.12.4"
tauri = "2.5.1"
thousands = "0.2.0"
thread_local = "1.1.7"
yew = "0.21.0"
