[package]
name = "sequence_rust"
version = "1.0.0"
authors = ["Axel West"]
edition = "2024"

[dependencies]
ahash = "0.8.11"
# alloc-madvise = "0.5.0"
bit-vec = "0.8.0"
bit-vec_serde = "0.6.0"
cached = "0.43.0"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
cmov = "0.3.1"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
divisors = "0.2.1"
fixedbitset = "0.5.7"
# flurry = "0.4.0"
function_name = "0.3"
hashbrown = "0.15.2"
itertools = "0.10.5"
lazy_static = "1.5.0"
libc = "0.2.172"
num = "0.4.3"
num-integer = "0.1.46"
num-primes = "0.3.0"
num-rational = "0.4.2"
num-traits = "0.2.19"
# perf = { path = "../perf" }
# perf_macro = { path = "../perf-macro" }
prime-factor = "0.6.2"
prime_factorization = "1.0.5"
primes = "0.4.0"
rand = "0.9.0"
raw-cpuid = "11.6.0"
# seize = "0.2.5"
serde = { version = "1.0.210", features = ["derive"] }
# set-partitions = "1.0.1"
shared_memory = "0.12.4"
# tauri = "2.5.1"
thousands = "0.2.0"
thread_local = "1.1.7"
tinyvec = { version = "1.10.0", features = ["alloc"] }
time-graph = "0.3.2"
time-graph-macros = "0.3.2"
yew = "0.21.0"
